@@ -31,6 +31,7 @@
 #include "lvremove.h"
 #include "lvrename.h"
 #include "mkfs.h"
+#include "maxfs.h"
 #include "mount.h"
 #include "pvmove.h"
 #include "removemirror.h"
@@ -80,7 +81,8 @@ LVActionsMenu::LVActionsMenu(LogVol *logicalVolume, VolGroup *volumeGroup, QWidg
     lv_change_action = lv_actions->addAction("lvchange", this, SLOT(changeLogicalVolume()));
     lv_change_action->setText( i18n("Change attributes or tags...")); 
 
-    lv_mkfs_action   = new KAction( i18n("Make filesystem..."), this);
+    lv_mkfs_action    = new KAction( i18n("Make filesystem..."), this);
+    lv_maxfs_action   = new KAction( i18n("Extend filesystem to maximum size..."), this);
     mount_filesystem_action   = new KAction( i18n("Mount filesystem..."), this);
     unmount_filesystem_action = new KAction( i18n("Unmount filesystem..."), this);
     add_mirror_action  = new KAction( i18n("Add leg or change mirror..."), this);
@@ -89,6 +91,9 @@ LVActionsMenu::LVActionsMenu(LogVol *logicalVolume, VolGroup *volumeGroup, QWidg
 
     connect(lv_mkfs_action, SIGNAL(triggered()), 
 	    this, SLOT(mkfsLogicalVolume()));
+
+    connect(lv_maxfs_action, SIGNAL(triggered()), 
+	    this, SLOT(maxfsLogicalVolume()));
 
     connect(add_mirror_action, SIGNAL(triggered()), 
 	    this, SLOT(addMirror()));
@@ -117,6 +122,7 @@ LVActionsMenu::LVActionsMenu(LogVol *logicalVolume, VolGroup *volumeGroup, QWidg
     filesystem_menu->addAction(unmount_filesystem_action);
     filesystem_menu->addSeparator();
     filesystem_menu->addAction(lv_mkfs_action);
+    filesystem_menu->addAction(lv_maxfs_action);
 
     if( m_lv ){
 	if(  m_lv->isWritable()  && !m_lv->isLocked() && !m_lv->isVirtual() && 
@@ -400,6 +406,15 @@ void LVActionsMenu::mkfsLogicalVolume()
         m_lv = m_mirror_origin;
 
     if( make_fs(m_lv) )
+	MainWindow->reRun();
+}
+
+void LVActionsMenu::maxfsLogicalVolume()
+{
+    if( m_mirror_origin )
+        m_lv = m_mirror_origin;
+
+    if( max_fs(m_lv) )
 	MainWindow->reRun();
 }
 
